--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,9 @@ test:
     - npm test
 
 deployment:
-  - docker info
-  - docker build -t coinpit/coinpit-bots .
-  - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-  - docker push coinpit/coinpit-bots
+  hub:
+    commands:
+      - docker info
+      - docker build -t coinpit/coinpit-bots .
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker push coinpit/coinpit-bots
