--- a/circle.yml
+++ b/circle.yml
@@ -13,6 +13,6 @@ deployment:
     branch: master
     commands:
       - docker info
-      - docker build -t coinpit/coinpit-bots .
+      - docker build -t coinpit/coinpit-bots:1.0.0 .
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push coinpit/coinpit-bots
