--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,9 @@ machine:
 
 test:
   override:
-    - npm test
+    - mocha test --reporter mocha-junit-reporter:
+      environment:
+          MOCHA_FILE: $CIRCLE_TEST_REPORTS/junit/test-results.xml
 
 deployment:
   docker:
