--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "fixtures.js": "^2.1.0",
     "mocha": "^3.1.0",
     "mocha-generators": "^1.2.0",
+    "mocha-junit-reporter": "^1.13.0",
     "sinon": "^1.17.7"
   }
 }
