--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ machine:
 
 test:
   override:
-    - mocha test --reporter mocha-junit-reporter:
+    - mocha specs --reporter mocha-junit-reporter:
       environment:
           MOCHA_FILE: $CIRCLE_TEST_REPORTS/junit/test-results.xml
 
