--- a/circle.yml
+++ b/circle.yml
@@ -6,9 +6,9 @@ machine:
 
 test:
   override:
-    - mocha specs --reporter mocha-junit-reporter:
-      environment:
-          MOCHA_FILE: $CIRCLE_TEST_REPORTS/junit/test-results.xml
+    - mocha specs --reporter mocha-junit-reporter
+  environment:
+    MOCHA_FILE: $CIRCLE_TEST_REPORTS/junit/test-results.xml
 
 deployment:
   docker:
