--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lodash": "^4.17.2",
     "mangler": "^1.0.1",
     "pusher-client": "^1.1.0",
-    "rest.js": "0.0.8",
+    "rest.js": "^0.2.0",
     "sequencer-js": "0.0.2",
     "socket.io-client": "^1.4.6"
   },
