--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coinpit-bots",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "bots for coinpit app",
   "scripts": {
     "test": "mocha specs/*"
@@ -28,7 +28,7 @@
   "dependencies": {
     "affirm.js": "^1.0.0",
     "bluebird": "^3.4.0",
-    "coinpit-client": "https://github.com/coinpit/coinpit-client#multi-instrument",
+    "coinpit-client": "^2.0.0",
     "lodash": "^4.17.2",
     "mangler": "^1.0.1",
     "pusher-client": "^1.1.0",
