--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mocha":                "^3.1.0",
     "mocha-generators":     "^1.2.0",
     "mocha-junit-reporter": "^1.13.0",
-    "sinon":                "^1.17.7"
+    "sinon":                "^1.17.7",
+    "uuid":                 "^3.0.1"
   }
 }
