--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name":            "coinpit-bots",
-  "version":         "2.0.0",
+  "version":         "2.0.1",
   "description":     "bots for coinpit app",
   "scripts":         {
     "test": "mocha specs/*"
@@ -28,12 +28,12 @@
   "dependencies":    {
     "affirm.js":        "^1.0.0",
     "bluebird":         "^3.4.0",
-    "coinpit-client":   "^5.0.0",
-    "lodash":           "^4.17.2",
-    "mangler":          "^1.0.1",
+    "coinpit-client":   "^5.0.1",
+    "lodash":           "^4.17.4",
+    "mangler":          "^1.0.4",
     "pusher-client":    "^1.1.0",
     "rest.js":          "^0.2.1",
-    "sequencer-js":     "0.0.2",
+    "sequencer-js":     "^0.0.2",
     "socket.io-client": "^1.4.6"
   },
   "devDependencies": {
