--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.4",
     "mangler": "^1.0.4",
     "pusher-client": "^1.1.0",
+    "request": "^2.81.0",
     "rest.js": "^0.2.1",
     "sequencer-js": "^0.0.2",
     "socket.io-client": "^1.4.6"
