--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bitmex-realtime-api": "^0.2.0",
     "bluebird": "^3.4.0",
     "coinpit-client": "^5.0.2",
+    "extend": "^3.0.1",
     "lodash": "^4.17.4",
     "mangler": "^1.0.4",
     "pusher-client": "^1.1.0",
