--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "affirm.js": "^1.0.0",
     "bitmex-realtime-api": "^0.2.1",
+    "bitmex-realtime-api-test": "^0.2.1",
     "bluebird": "^3.4.0",
     "coinpit-client": "^5.0.2",
     "extend": "^3.0.1",
